Added link to slides

--- a/index.Rmd
+++ b/index.Rmd
@@ -80,7 +80,7 @@ Not working? Send me a message and we'll figure out a time to meet and see what'
 
 Sometime over the weekend (I'll send a message) I'll put the slides and files we'll need here.
 
-- [Rmakrdown slides](https://www.villasenor-derbez.com/intro2Rmd/CourseMaterials/intro2Rmd.html) (Yes, I am re-using them)
+- [Rmakrdown slides](http://www.villasenor-derbez.com/intro2Rmd/CourseMaterials/intro2Rmd.html) (Yes, I am re-using them)
 
 
 
