Added all files

--- a/index.Rmd
+++ b/index.Rmd
@@ -9,6 +9,9 @@ output:
       toc_float: yes
 ---
 
+The goal for this workshop is to step a bit away from ecology / fisheries management (just a bit), and focus more on code and skill that will help you be way more efficient (and look like a pro). If it all works, we should be able to write a manuscritp that has references, equations, figures, and tables... all within `R`! It should look like [this](AwesomeArticle.pdf).
+
+
 # **BEFORE TUESDAY!**
 
 I hope that bold, all caps, exclamation is enough... but please, *please*, **please**, complete these 3 steps before Tuesday. You don't have to read all, you can just copy-paste the code, and do the things specified as
@@ -64,18 +67,27 @@ R will do its thing, and if everything works, you'll get a nice(ish) PDF documen
 Not working? Send me a message and we'll figure out a time to meet and see what's happening
 
 
-## Files you'll need
+## Files
 
 Sometime over the weekend (I'll send a message) I'll put the slides and files we'll need here.
 
-- [Rmakrdown slides](http://www.villasenor-derbez.com/intro2Rmd/CourseMaterials/intro2Rmd.html) (Yes, I am re-using them)
+- [Rmakrdown slides](http://www.villasenor-derbez.com/intro2Rmd/CourseMaterials/intro2Rmd.html)
+- [Class materials](class_materials.zip)
 
+This is what we will be modelling:
 
+\begin{equation}
+\begin{split} \label{eq:pred_prey}
+\frac{dA}{dt} = I_AA - d_AA - aAS \\
+\frac{dS}{dt} = ar_SAS - d_SS -fS
+\end{split}
+\end{equation}
 
-
+Do you know what it is? Full definition in class
 
 ----
 
 Other resources
 
 - [R for Data Science FREE online book](http://r4ds.had.co.nz/)
+-[Guide to PDF documents in Rmarkdown](https://rmarkdown.rstudio.com/pdf_document_format.html)
