--- a/notes.Rmd
+++ b/notes.Rmd
@@ -2,7 +2,10 @@
 title: "Notes"
 author: "Juan Carlos Villaseñor-Derbez"
 date: "`r Sys.Date()`"
-output: html_document
+output:
+  html_document:
+    toc: yes
+    toc_float: yes
 ---
 
 ```{r setup, include=FALSE}
