--- a/notes.Rmd
+++ b/notes.Rmd
@@ -85,15 +85,15 @@ output:
 ```
 \begin{equation}
 \begin{split} \label{eq:pred_prey}
-\frac{dA}{dt} = I_A - d_AA - aAS \\
-\frac{dS}{dt} = ar_SAS - d_SS -fS
+\frac{dN}{dt} = r N - a N P \\	 
+\frac{dP}{dt} = c a N P - m P -fP
 \end{split}
 \end{equation}
 ```
 \begin{equation}
 \begin{split} \label{eq:pred_prey}
-\frac{dA}{dt} = I_A - d_AA - aAS \\
-\frac{dS}{dt} = ar_SAS - d_SS -fS
+\frac{dN}{dt} = r N - a N P \\	 
+\frac{dP}{dt} = c a N P - m P -fP
 \end{split}
 \end{equation}
 
