--- a/references.bib
+++ b/references.bib
@@ -53,3 +53,14 @@ keywords = {Policy and ReserveRecovery and TURFeffect},
 f1000-projects = {PhD and TURFeffect},
 abstract = {Indiscriminate and intense fishing has occurred in many marine ecosystems around the world. Although this practice may have negative effects on biodiversity and populations of individual species, it may also increase total fishery productivity by removing predatory fish. We examine the potential for this phenomenon to explain the high reported wild catches in the East China Sea-one of the most productive ecosystems in the world that has also had its catch reporting accuracy and fishery management questioned. We show that reported catches can be approximated using an ecosystem model that allows for trophic cascades (i.e., the depletion of predators and consequent increases in production of their prey). This would be the world's largest known example of marine ecosystem "engineering" and suggests that trade-offs between conservation and food production exist. We project that fishing practices could be modified to increase total catches, revenue, and biomass in the East China Sea, but single-species management would decrease both catches and revenue by reversing the trophic cascades. Our results suggest that implementing single-species management in currently lightly managed and highly exploited multispecies fisheries (which account for a large fraction of global fish catch) may result in decreases in global catch. Efforts to reform management in these fisheries will need to consider system wide impacts of changes in management, rather than focusing only on individual species.}
 }
+
+@article{costello2016,
+  title={Global fishery prospects under contrasting management regimes},
+  author={Costello, Christopher and Ovando, Daniel and Clavelle, Tyler and Strauss, C Kent and Hilborn, Ray and Melnychuk, Michael C and Branch, Trevor A and Gaines, Steven D and Szuwalski, Cody S and Cabral, Reniel B and others},
+  journal={Proceedings of the national academy of sciences},
+  volume={113},
+  number={18},
+  pages={5125--5129},
+  year={2016},
+  publisher={National Acad Sciences}
+}
